Get the file size differently